# cmake-corrosion-nix

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md  flake.nix
.github/workflows/: build.yml  dependabot-auto-merge.yml
nix/: build-cmake-proj.nix  build-cxxbridge-cmd.nix  build-rust.nix  build_rust.nix
rust_src/: CMakeLists.txt  Cargo.toml
rust_src/src/: bridge.rs
src/: main.cpp
